<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context=".activities.doctor_path.CalendarActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"

                android:textColor="@color/blue"
                android:fontFamily="@font/montserrat_regular"
                android:background="@drawable/left_arrow"
                android:textStyle="bold"
                android:onClick="previousMonthAction"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/calendarMonthYearTextView"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"

                android:text="@string/emptyBMIValue"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_marginEnd="50dp"

                android:textColor="@color/blue"
                android:fontFamily="@font/montserrat_regular"
                android:background="@drawable/right_arrow"
                android:textStyle="bold"
                android:onClick="nextMonthAction"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mondayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesdayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesdayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursdayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fridayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturdayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sundayText"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_regular" >
        </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>