<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TestCRUD">

    <EditText
        android:id="@+id/patientUIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="30"
        android:inputType="textPersonName"
        android:text="@string/uid"
        android:gravity="center_vertical"

        app:layout_constraintBottom_toBottomOf="@id/emailDisplayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.75"/>

    <TextView
        android:id="@+id/emailDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:text="@string/email"
        android:gravity="center_vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientUIDText"

        app:layout_constraintVertical_bias="0.2"/>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"

        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/emailDisplayText"

        app:layout_constraintVertical_bias="0.2"/>
</androidx.constraintlayout.widget.ConstraintLayout>