<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_blue"
    tools:context=".activities.patient_path.CreatePatientAccountActivity">

    <TextView
        android:id="@+id/doctorCreateDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/patientcreate_create_account"
        android:textColor="@color/very_dark_grey"
        android:textSize="34sp"


        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/patientcreateUsernameTextEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/blue_gray_round_textedit"
        android:ems="10"

        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/patientcreate_username"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <EditText
        android:id="@+id/patientCreateEmailTextEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_gray_round_textedit"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/patientcreate_email_address"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patientcreateUsernameTextEdit" />

    <EditText
        android:id="@+id/patientCreatePasswordTextEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_gray_round_textedit"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/patientcreate_password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patientCreateEmailTextEdit" />

    <EditText
        android:id="@+id/patientcreatePasswordConfirmTextEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_gray_round_textedit"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/patientcreate_confirm_password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patientCreatePasswordTextEdit" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/patientCreateSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:background="@drawable/blue_round_button"

        android:fontFamily="@font/montserrat_regular"
        android:text="@string/patientcreate_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patientcreatePasswordConfirmTextEdit"
        />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patientcreateOrText">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/googleicon"
            android:elevation="3dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/patientCreateSignInWithGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_blue_border_button"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:paddingStart="20dp"

            android:text="@string/patientcreate_continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/light_blue"
            android:textSize="18sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/patientcreateOrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/patientcreate_or"
        android:textColor="@color/very_dark_grey"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientCreateSignInButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>