<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.doctor_path.ApptEventFormActivity">


    <EditText
        android:id="@+id/apptEventTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/titleText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apptEventDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/descriptionText"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apptEventTitleText"

        app:layout_constraintVertical_bias="0.02" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apptEventAddEventButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:background="@drawable/blue_round_button"
        android:text="@string/addApptText"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apptEventDescriptionText"

        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>